--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cat</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <img src="https://placekitten.com/200/300" alt="Cute Cat" style="width: 200px; height: 300px;">
 </body>
 </html>
