--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Cat</title>
 </head>
 <body>
-    <img src="https://placekitten.com/200/300" alt="Cute Cat" style="width: 200px; height: 300px;">
+    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">
 </body>
 </html>
