--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat</title>
+    <style src="style.css"></style>
 </head>
 <body>
     <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">
+    <button>Cat</button>
 </body>
 </html>
