--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<style src="style.css"></style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat</title>
-    <style src="style.css"></style>
 </head>
 <body>
-    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">
+    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">AshirumKahadewr
     <button>Cat</button>
 </body>
 </html>
