--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Cat</title>
 </head>
 <body>
-    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">AshirumKahadewr
-    <button>Cat</button>
+    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif" href="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">AshirumKahadewr
 </body>
 </html>
