--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Cat</title>
 </head>
 <body>
-    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif" href="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">AshirumKahadewr
+    <img src="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif" href="https://c.tenor.com/GbutACtJBTMAAAAd/cat.gif">
 </body>
 </html>
